...
            guard let arView = ARService.shared.arView else { return }
            arView.updateZoom(scale: zoom)
        }
        return control
    }()
    
    private lazy var shootButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.backgroundColor = .systemRed
        button.layer.cornerRadius = 35
        button.layer.borderWidth = 3
        button.layer.borderColor = UIColor.white.cgColor
...
